tests/fixtures/errors/numeric_dissect_noelse.z
# E0500: a numeric-value dissection with no case for the concrete value and no
# else is a compile-time error at the instantiation that has no matching arm.
Box: class {
    used: u32
    only: function {:this} out StringView is {
        match cap case 0 then {
            return "empty"
        }
    }
} as { cap: u32.generic }

main: function is {
    b: (Box cap: 9) used: 0
    print "\{b.only}"
}
